<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start">start</string>
    <string name="expression_viewer_name">SWAN Expression Viewer</string>
    <string name="sensor_viewer_name">SWAN Sensor Viewer</string>
    <string name="swan_app_name">SWAN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_set_name">Set Name</string>
    <string name="action_enable">Enable</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_swanlake">SWAN Lake</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_name">Name</string>
    <string name="sort_eval_per">Time</string>
    <string name="sort_eval_rate">Frequency</string>
    <string name="sort_eval_delay">Delay</string>
    <string name="sort_eval_avg_time">Avg</string>
    <string name="sort_eval_min_time">Min</string>
    <string name="sort_eval_max_time">Max</string>
    <string name="sort_order">Sort Order</string>
    <string name="expression_viewer">Back</string>

    <!--  Sense -->
    <!-- OVERRIDE INTENT ACTIONS FOR BUNDLED SENSE PLATFORM (ALSO CHANGE IN MANIFEST!!) -->
    <string name="action_sense_service">interdroid.swan.SENSE_SERVICE</string>
    <string name="action_sense_new_data">interdroid.swan.NEW_DATA</string>
    <string name="action_sense_send_data">interdroid.swan.SEND_DATA</string>
    <string name="action_sense_alive_check_alarm">interdroid.swan.CHECK_ALIVE</string>
    <string name="action_sense_new_requirements">interdroid.swan.NEW_REQUIREMENTS</string>
    <string name="action_widget_update">interdroid.swan.UPDATE_APP_WIDGET</string>

    <!-- NOTIFICATION RESOURCES -->
    <string name="stat_notify_action">interdroid.swan.NOTIFICATION</string>
    <string name="stat_notify_title">Sense Demo</string>
    <string name="stat_notify_content_off_loggedin">Meting gestopt, ingelogd als \'%s\'</string>
    <string name="stat_notify_content_off_loggedout">Meting gestopt, geen verbinding met server</string>
    <string name="stat_notify_content_on_loggedin">"Meting actief, ingelogd als \'%s\'"</string>
    <string name="stat_notify_content_on_loggedout">Meting actief, geen verbinding met server</string>

    <string name="sense_login">Login to Sense</string>
    <string name="sense_logout">Logout from Sense</string>
    <string name="sense_signup">Sign up to Sense</string>
    <string name="sense_settings">Sense Settings</string>

    <!-- tmp stuff -->
    <string name="title_activity_nearby_runners">NearbyRunnersActivity</string>

    <string name="node_eui_hint">Your node eui. Leave blank for all nodes.</string>
    <string name="failed_to_retrieve_nodes">Failed to retrieve nodes.</string>
    <string name="no_nodes_found">No nodes found.</string>
    <string name="failed_to_retrieve_packets">Failed to retrieve packets.</string>
    <string name="no_packets_found">No packets found.</string>
    <string name="packets_retrieved">Packets retrieved!</string>
    <string name="node_title">Node:</string>
    <string name="nodes_received">Nodes received!</string>
    <string name="packet_received">Packet received!</string>
    <string name="mqtt_error">MQTT error: %1$s</string>
    <string name="packet_title">Packet:</string>

</resources>