<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:visible="true"/>
    <item
        android:id="@+id/action_set_name"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"
        android:title="@string/action_set_name"
        android:visible="true"/>
    <item
        android:id="@+id/action_enable"
        android:actionViewClass="android.widget.Switch"
        app:showAsAction="always"
        android:title="@string/action_enable"/>
    <item
        android:id="@+id/login"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sense_login"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sense_logout"/>
    <item
        android:id="@+id/signup"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sense_signup"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/sense_settings"/>

    <item
        android:id="@+id/jsonsensor"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="JsonSensor"/>

</menu>